--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: Tomas Hellberg
-theme: jekyll-theme-cayman
 show_downloads: false
 github:
   is_project_page: false
+remote_theme: pages-themes/primer@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
