--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,4 @@ title: Tomas Hellberg
 show_downloads: false
 github:
   is_project_page: false
-remote_theme: pages-themes/primer@v0.6.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: jekyll-theme-primer
